# asio_owen

./: .gitignore  AGENTS.md  BENCH_STEPS.md  CLAUDE.md  CMakeLists.txt  DB_POOL_DESIGN.md  GATEWAY_AUTH_DESIGN.md  GATEWAY_DESIGN.md  MEM_CHECK.md  PERF_REPORT.md  PLOW_REFERENCE.md  bench.sh  bench_config.sh  bench_verify.sh  build.sh  config.ini  kill_zebra_others.sh  rebuild_asan.sh  rebuild_deploy.sh  rebuild_deploy.sh.bak.0716
.claude/: settings.local.json
bench/: bench.sh  bench_full.sh  verify.sh  wrk_jwt.lua  wrk_post.lua
config.d/: 00-server.ini  10-mysql.ini  11-redis.ini  20-upstream.ini  21-http_pool.ini  30-security.ini  31-trusted_proxies.ini  32-ip_blacklist.ini  33-auth_whitelist.ini  34-path_blacklist.ini  35-cors.ini  40-rate_limit.ini
docs/: BENCH_STEPS.md  CODE_ANALYSIS_CLAUDE_2026-07-13.md  CODE_ANALYSIS_CLAUDE_2026-07-18.md  CODE_DOC_REVIEW_2026-07-06.md  CODE_REVIEW_2026-07-12.md  CODE_REVIEW_FIXES_2026-07-13.md  CONFIG_REFACTOR_PLAN.md  CONN_REUSE_PROBE_2026-07-10.md  CONN_REUSE_TCPDUMP.md  CONN_REUSE_TCPDUMP_2026-07-05.md  CONN_REUSE_VERIFY.md  CONN_REUSE_VERIFY_2026-07-05.md  CORS_REVIEW_CLAUDE_2026-07-18.md  DB_POOL_CODE_OPTIMIZATION_2026-07-07.md  DB_POOL_DESIGN.md  DESIGN_ASSESSMENT_CLAUDE_2026-07-19.md  FIX_2026-07-06.md  GATEWAY_AUTH_DESIGN.md  GATEWAY_DESIGN.md  HTTP_LAYER_REVIEW_2026-07-11.md  HTTP_POOL_PROBE_REMOVAL_2026-07-11.md  HTTP_POOL_SECURITY_AUDIT_2026-07-14.md  HTTP_SERVER_OPTIMIZATION_2026-07-07.md  IDLE_TIMEOUT_TUNING.md  MEMORY_LEAK_ANALYSIS_CLAUDE_2026-07-18.md  MEM_CHECK.md  MEM_CONN_REUSE_REVIEW_2026-07-06.md  MYSQL_POOL_REVIEW_CONFIRMATION_2026-07-11.md  OPTIMIZATION_STABILITY_2026-07-06.md  PERF_2026-07-05.md  PERF_ANALYSIS.md  PERF_REPORT.md  REDIS_POOL_LAMBDA_FIX_2026-07-12.md  REDIS_POOL_REVIEW_CONFIRMATION_2026-07-11.md  REDIS_WORKER_MODE_CLAUDE_2026-07-18.md  REMOVE_NGINX_PLAN.md  SECURITY_TEST.md  SMART_PTR_COROUTINE_REVIEW_CLAUDE_2026-07-19.md  STABILITY_TROUBLESHOOTING.md  STATS_2026-07-07.md  (+7 more)
src/: main.cpp  upstream_manager.hpp
src/app/: app_config.hpp  application.cpp  application.hpp  pool_stats_service.hpp  reload_service.hpp  routes.cpp  routes.hpp  snapshot_service.hpp
src/common/: config.hpp  logger.hpp  scope_guard.hpp  signal_exit.hpp  timeout.hpp
src/db/: mysql_connection.cpp  mysql_connection.hpp  mysql_pool.hpp  mysql_pool_stats.cpp  mysql_pool_stats.hpp  mysql_result_json.cpp  mysql_result_json.hpp  redis_command.cpp  redis_command.hpp  redis_connection.cpp  redis_connection.hpp  redis_pool.hpp  redis_pool_stats.cpp  redis_pool_stats.hpp  redis_reply.cpp  redis_reply.hpp
src/http/: client_session.hpp  cors.hpp  http_body_reader.hpp  http_context.hpp  http_io.hpp  http_pool.hpp  http_protocol.hpp  http_server.hpp  json_transform.hpp  proxy_forwarder.hpp  response.hpp  response_builder.hpp  upstream_manager.hpp
src/security/: auth_whitelist.hpp  cidr.hpp  ip_blacklist.hpp  jwt_auth.hpp  path_blacklist.hpp  path_normalize.hpp  rate_limiter.hpp  real_ip.hpp  security_rules.hpp
tests/: CMakeLists.txt  test_client_session.cpp  test_config_load.cpp  test_cors.cpp  test_http_pool.cpp  test_http_protocol.cpp  test_ip_blacklist.cpp  test_json_transform.cpp  test_jwt_auth.cpp  test_mysql_pool.cpp  test_mysql_result_json.cpp  test_path_normalize.cpp  test_placeholder.cpp  test_proxy_forwarder.cpp  test_proxy_framing.cpp  test_rate_limiter.cpp  test_redis_pool.cpp  test_redis_pool_shutdown.cpp  test_response.cpp  test_security_chain.cpp  test_upstream_manager.cpp  test_vuln_fixes.cpp
